--- a/model_2_modelling.ipynb
+++ b/model_2_modelling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1c727d6f",
+   "id": "1bd8c860",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "76d13c78",
+   "id": "a7834071",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0e26fcc5",
+   "id": "970ad14e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5a45874",
+   "id": "4ce480e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bf41f2a4",
+   "id": "6865e55a",
    "metadata": {
     "scrolled": true
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c08eed5",
+   "id": "79c014b6",
    "metadata": {},
    "source": [
     "**Just learning from the users who have long than 3 months of records.** "
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1c39bb0f",
+   "id": "8f2cda1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "952541f2",
+   "id": "9ee7b276",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a8276079",
+   "id": "5fc2c85f",
    "metadata": {},
    "outputs": [
     {
@@ -546,20 +546,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2403d3b4",
+   "id": "871c06b5",
    "metadata": {},
    "source": [
     "**The old model predicted all the applicants in the dataset df_3m as 'good' client.**  \n",
     "- We labeled the credit card users who overdue for more than 60 days as risk clients.\n",
-    "- The money loss from the old model is: 1.8% * N * loss_aver, N is the total number of users, loss_aver is the average of money loss caused by a 'bad' client.  \n",
-    "-The precision p of our new model will represent how much more 'bad' clients we can predict. The money loss can be calculated as: 1.8%*N*loss_aver*p - (1-p)*N*gain_aver  \n",
+    "- The money loss predicted by the old model is: 0 \n",
+    "-The precision of our new model will represent how many 'bad' clients we can predict. The money loss can be predicted as: FN * loss_aver + FP * gain_aver, loss_aver is the average of money loss caused by a 'bad' client, gain_aver is the money gain brought by a 'good' client on average. \n",
     "-So how to evalute the model's performance depends on the money loss of one bad client and money gain of one good client. We can talk with other teams to discuss how to do feature engineering, select model and tune model."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "514b6c61",
+   "id": "27fc4171",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e2f26f",
+   "id": "d91c5243",
    "metadata": {},
    "source": [
     "# Scaling data and Processing imbalance dataset"
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae3254b",
+   "id": "1735c267",
    "metadata": {},
    "source": [
     "**Oversample the minority class using SMOTE**"
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0416bd9e",
+   "id": "dbb91256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feea9d1f",
+   "id": "e46150cd",
    "metadata": {},
    "source": [
     "# Model Selection"
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e073deff",
+   "id": "04bdebc2",
    "metadata": {},
    "source": [
     "**Using repeated stratified Kfold to evaluate.**\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "35d9c889",
+   "id": "43ab98a3",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7ad215d4",
+   "id": "ecd738f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfe4483d",
+   "id": "165e6d0a",
    "metadata": {},
    "source": [
     "## Using ROC_AUC as metric to choose models"
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a01de8",
+   "id": "dbe1cd08",
    "metadata": {},
    "source": [
     "**1. Logistic Regression**"
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8a76a025",
+   "id": "d0e5912b",
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a149f5e3",
+   "id": "33795f86",
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a7ba562",
+   "id": "331e19d7",
    "metadata": {},
    "source": [
     "**2. SVM**"
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e1adb8ed",
+   "id": "3603ef09",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "38f4a498",
+   "id": "ad1ae7e8",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "311036fd",
+   "id": "ac6a16eb",
    "metadata": {},
    "source": [
     "**3. Random Forest**"
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e2c9d42d",
+   "id": "8293100f",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "679a06d1",
+   "id": "00d87bca",
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27627453",
+   "id": "a3959bd3",
    "metadata": {},
    "source": [
     "**4. XGBoost**"
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "95be6e8f",
+   "id": "4e15cc0f",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9a138df0",
+   "id": "68aebc11",
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78f5f243",
+   "id": "d626e805",
    "metadata": {},
    "source": [
     "# Tune model"
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5e66050",
+   "id": "31038583",
    "metadata": {},
    "source": [
     "**XGBoost**"
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4b10d1a",
+   "id": "d3028d4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8947fe50",
+   "id": "f416c11f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd6a6e46",
+   "id": "bac32581",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a26eccb5",
+   "id": "f4c57f20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0d5a4a8",
+   "id": "f5e4464e",
    "metadata": {},
    "source": [
     "**Test the tuned model**"
@@ -1204,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba940c14",
+   "id": "12e098dd",
    "metadata": {
     "scrolled": false
    },
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7285e458",
+   "id": "6f59db99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc150e36",
+   "id": "6bf096bb",
    "metadata": {},
    "source": [
     "**Random Forest**"
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cebaa699",
+   "id": "a33e8563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9476e44a",
+   "id": "2cd4571f",
    "metadata": {},
    "outputs": [],
    "source": [
