--- a/model_1_EDA.ipynb
+++ b/model_1_EDA.ipynb
@@ -216,16 +216,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Higher education', 'Secondary / secondary special',\n",
+       "       'Incomplete higher', 'Lower secondary', 'Academic degree'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1['NAME_EDUCATION_TYPE'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,16 +257,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Working', 'Commercial associate', 'Pensioner', 'State servant',\n",
+       "       'Student'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1['NAME_INCOME_TYPE'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,16 +294,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Rented apartment', 'House / apartment', 'Municipal apartment',\n",
+       "       'With parents', 'Co-op apartment', 'Office apartment'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1['NAME_HOUSING_TYPE'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,18 +332,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'Security staff', 'Sales staff', 'Accountants', 'Laborers',\n",
+       "       'Managers', 'Drivers', 'Core staff', 'High skill tech staff',\n",
+       "       'Cleaning staff', 'Private service staff', 'Cooking staff',\n",
+       "       'Low-skill Laborers', 'Medicine staff', 'Secretaries',\n",
+       "       'Waiters/barmen staff', 'HR staff', 'Realty agents', 'IT staff'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1['OCCUPATION_TYPE'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,16 +385,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Civil marriage', 'Married', 'Single / not married', 'Separated',\n",
+       "       'Widow'], dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1['NAME_FAMILY_STATUS'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -384,28 +450,27 @@
        "       'annual_income', 'NAME_INCOME_TYPE', 'NAME_EDUCATION_TYPE',\n",
        "       'NAME_FAMILY_STATUS', 'NAME_HOUSING_TYPE', 'birthday',\n",
        "       'days_employment', 'mobile', 'work_phone', 'phone', 'email',\n",
-       "       'OCCUPATION_TYPE', 'family_size', 'car', 'property', 'gender_M',\n",
-       "       'gender_F', 'education', 'income_Student', 'income_State servant',\n",
-       "       'income_Commercial associate', 'income_Working', 'income_Pensioner',\n",
-       "       'income_Student', 'income_State servant', 'income_Commercial associate',\n",
-       "       'income_Working', 'income_Pensioner', 'housing_Co-op apartment',\n",
-       "       'housing_Rented apartment', 'housing_With parents',\n",
-       "       'housing_Municipal apartment', 'housing_House / apartment',\n",
-       "       'housing_Office apartment', 'occupation_Laborers',\n",
-       "       'occupation_Medicine staff', 'occupation_Security staff',\n",
-       "       'occupation_Core staff', 'occupation_Low-skill Laborers',\n",
-       "       'occupation_Accountants', 'occupation_Private service staff',\n",
-       "       'occupation_Cooking staff', 'occupation_Realty agents',\n",
-       "       'occupation_High skill tech staff', 'occupation_Waiters/barmen staff',\n",
-       "       'occupation_others', 'occupation_HR staff', 'occupation_Cleaning staff',\n",
-       "       'occupation_Sales staff', 'occupation_Managers',\n",
-       "       'occupation_Secretaries', 'occupation_IT staff', 'occupation_Drivers',\n",
-       "       'marital_Separated', 'marital_Civil marriage',\n",
-       "       'marital_Single / not married', 'marital_Widow', 'marital_Married'],\n",
+       "       'OCCUPATION_TYPE', 'family_size', 'car', 'property', 'gender_F',\n",
+       "       'gender_M', 'education', 'income_Commercial associate',\n",
+       "       'income_Pensioner', 'income_Student', 'income_State servant',\n",
+       "       'income_Working', 'housing_Municipal apartment',\n",
+       "       'housing_Office apartment', 'housing_Rented apartment',\n",
+       "       'housing_Co-op apartment', 'housing_House / apartment',\n",
+       "       'housing_With parents', 'occupation_Laborers', 'occupation_Core staff',\n",
+       "       'occupation_Realty agents', 'occupation_others',\n",
+       "       'occupation_Security staff', 'occupation_Secretaries',\n",
+       "       'occupation_Cleaning staff', 'occupation_Private service staff',\n",
+       "       'occupation_Accountants', 'occupation_Managers', 'occupation_HR staff',\n",
+       "       'occupation_Waiters/barmen staff', 'occupation_Cooking staff',\n",
+       "       'occupation_High skill tech staff', 'occupation_Drivers',\n",
+       "       'occupation_Sales staff', 'occupation_IT staff',\n",
+       "       'occupation_Low-skill Laborers', 'occupation_Medicine staff',\n",
+       "       'marital_Civil marriage', 'marital_Separated',\n",
+       "       'marital_Single / not married', 'marital_Married', 'marital_Widow'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,10 +522,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -468,7 +531,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -496,10 +559,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -507,7 +568,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -528,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +598,7 @@
        "array([1])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,10 +696,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -646,7 +705,7 @@
        "Text(0.5, 1.0, 'Target distribution')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -670,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +883,7 @@
        "[45985 rows x 6 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,13 +919,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the new data\n",
-    "df.to_csv('./data/data_eda.csv')"
+    "df.to_csv('./data/data_eda.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -889,5 +955,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
