--- a/model_2_modelling.ipynb
+++ b/model_2_modelling.ipynb
@@ -53,7 +53,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>annual_income</th>\n",
        "      <th>birthday</th>\n",
        "      <th>days_employment</th>\n",
@@ -63,6 +62,7 @@
        "      <th>email</th>\n",
        "      <th>car</th>\n",
        "      <th>property</th>\n",
+       "      <th>education</th>\n",
        "      <th>...</th>\n",
        "      <th>occupation_Realty agents</th>\n",
        "      <th>occupation_Private service staff</th>\n",
@@ -79,7 +79,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>427500.0</td>\n",
        "      <td>-12005</td>\n",
        "      <td>-4542</td>\n",
@@ -89,6 +88,7 @@
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -103,7 +103,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>427500.0</td>\n",
        "      <td>-12005</td>\n",
        "      <td>-4542</td>\n",
@@ -113,6 +112,7 @@
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -127,7 +127,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>112500.0</td>\n",
        "      <td>-21474</td>\n",
        "      <td>-1134</td>\n",
@@ -135,6 +134,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
@@ -151,7 +151,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>270000.0</td>\n",
        "      <td>-19110</td>\n",
        "      <td>-3051</td>\n",
@@ -160,6 +159,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -175,7 +175,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>270000.0</td>\n",
        "      <td>-19110</td>\n",
        "      <td>-3051</td>\n",
@@ -184,6 +183,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -223,7 +223,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>438552</th>\n",
-       "      <td>438552</td>\n",
        "      <td>135000.0</td>\n",
        "      <td>-22717</td>\n",
        "      <td>365243</td>\n",
@@ -232,6 +231,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -247,7 +247,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>438553</th>\n",
-       "      <td>438553</td>\n",
        "      <td>103500.0</td>\n",
        "      <td>-15939</td>\n",
        "      <td>-3007</td>\n",
@@ -257,6 +256,7 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -271,7 +271,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>438554</th>\n",
-       "      <td>438554</td>\n",
        "      <td>54000.0</td>\n",
        "      <td>-8169</td>\n",
        "      <td>-372</td>\n",
@@ -281,6 +280,7 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -295,7 +295,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>438555</th>\n",
-       "      <td>438555</td>\n",
        "      <td>72000.0</td>\n",
        "      <td>-21673</td>\n",
        "      <td>365243</td>\n",
@@ -304,6 +303,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -319,7 +319,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>438556</th>\n",
-       "      <td>438556</td>\n",
        "      <td>121500.0</td>\n",
        "      <td>-18858</td>\n",
        "      <td>-1201</td>\n",
@@ -328,6 +327,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -343,76 +343,76 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>438557 rows × 55 columns</p>\n",
+       "<p>438557 rows × 49 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Unnamed: 0  annual_income  birthday  days_employment  family_size  \\\n",
-       "0                0       427500.0    -12005            -4542          2.0   \n",
-       "1                1       427500.0    -12005            -4542          2.0   \n",
-       "2                2       112500.0    -21474            -1134          2.0   \n",
-       "3                3       270000.0    -19110            -3051          1.0   \n",
-       "4                4       270000.0    -19110            -3051          1.0   \n",
-       "...            ...            ...       ...              ...          ...   \n",
-       "438552      438552       135000.0    -22717           365243          1.0   \n",
-       "438553      438553       103500.0    -15939            -3007          1.0   \n",
-       "438554      438554        54000.0     -8169             -372          1.0   \n",
-       "438555      438555        72000.0    -21673           365243          2.0   \n",
-       "438556      438556       121500.0    -18858            -1201          2.0   \n",
+       "        annual_income  birthday  days_employment  family_size  work_phone  \\\n",
+       "0            427500.0    -12005            -4542          2.0           1   \n",
+       "1            427500.0    -12005            -4542          2.0           1   \n",
+       "2            112500.0    -21474            -1134          2.0           0   \n",
+       "3            270000.0    -19110            -3051          1.0           0   \n",
+       "4            270000.0    -19110            -3051          1.0           0   \n",
+       "...               ...       ...              ...          ...         ...   \n",
+       "438552       135000.0    -22717           365243          1.0           0   \n",
+       "438553       103500.0    -15939            -3007          1.0           0   \n",
+       "438554        54000.0     -8169             -372          1.0           1   \n",
+       "438555        72000.0    -21673           365243          2.0           0   \n",
+       "438556       121500.0    -18858            -1201          2.0           0   \n",
        "\n",
-       "        work_phone  phone  email  car  property  ...  \\\n",
-       "0                1      0      0  1.0       1.0  ...   \n",
-       "1                1      0      0  1.0       1.0  ...   \n",
-       "2                0      0      0  1.0       1.0  ...   \n",
-       "3                0      1      1  0.0       1.0  ...   \n",
-       "4                0      1      1  0.0       1.0  ...   \n",
-       "...            ...    ...    ...  ...       ...  ...   \n",
-       "438552           0      0      0  0.0       1.0  ...   \n",
-       "438553           0      0      0  0.0       0.0  ...   \n",
-       "438554           1      0      0  0.0       0.0  ...   \n",
-       "438555           0      0      0  0.0       1.0  ...   \n",
-       "438556           0      1      0  0.0       1.0  ...   \n",
+       "        phone  email  car  property  education  ...  occupation_Realty agents  \\\n",
+       "0           0      0  1.0       1.0        3.0  ...                         0   \n",
+       "1           0      0  1.0       1.0        3.0  ...                         0   \n",
+       "2           0      0  1.0       1.0        1.0  ...                         0   \n",
+       "3           1      1  0.0       1.0        1.0  ...                         0   \n",
+       "4           1      1  0.0       1.0        1.0  ...                         0   \n",
+       "...       ...    ...  ...       ...        ...  ...                       ...   \n",
+       "438552      0      0  0.0       1.0        1.0  ...                         0   \n",
+       "438553      0      0  0.0       0.0        1.0  ...                         0   \n",
+       "438554      0      0  0.0       0.0        3.0  ...                         0   \n",
+       "438555      0      0  0.0       1.0        1.0  ...                         0   \n",
+       "438556      1      0  0.0       1.0        1.0  ...                         0   \n",
        "\n",
-       "        occupation_Realty agents  occupation_Private service staff  \\\n",
-       "0                              0                                 0   \n",
-       "1                              0                                 0   \n",
-       "2                              0                                 0   \n",
-       "3                              0                                 0   \n",
-       "4                              0                                 0   \n",
-       "...                          ...                               ...   \n",
-       "438552                         0                                 0   \n",
-       "438553                         0                                 0   \n",
-       "438554                         0                                 0   \n",
-       "438555                         0                                 0   \n",
-       "438556                         0                                 0   \n",
+       "        occupation_Private service staff  marital_Single / not married  \\\n",
+       "0                                      0                             0   \n",
+       "1                                      0                             0   \n",
+       "2                                      0                             0   \n",
+       "3                                      0                             1   \n",
+       "4                                      0                             1   \n",
+       "...                                  ...                           ...   \n",
+       "438552                                 0                             0   \n",
+       "438553                                 0                             1   \n",
+       "438554                                 0                             1   \n",
+       "438555                                 0                             0   \n",
+       "438556                                 0                             0   \n",
        "\n",
-       "        marital_Single / not married  marital_Married  marital_Civil marriage  \\\n",
-       "0                                  0                0                       1   \n",
-       "1                                  0                0                       1   \n",
-       "2                                  0                1                       0   \n",
-       "3                                  1                0                       0   \n",
-       "4                                  1                0                       0   \n",
-       "...                              ...              ...                     ...   \n",
-       "438552                             0                0                       0   \n",
-       "438553                             1                0                       0   \n",
-       "438554                             1                0                       0   \n",
-       "438555                             0                1                       0   \n",
-       "438556                             0                1                       0   \n",
+       "        marital_Married  marital_Civil marriage  marital_Separated  \\\n",
+       "0                     0                       1                  0   \n",
+       "1                     0                       1                  0   \n",
+       "2                     1                       0                  0   \n",
+       "3                     0                       0                  0   \n",
+       "4                     0                       0                  0   \n",
+       "...                 ...                     ...                ...   \n",
+       "438552                0                       0                  1   \n",
+       "438553                0                       0                  0   \n",
+       "438554                0                       0                  0   \n",
+       "438555                1                       0                  0   \n",
+       "438556                1                       0                  0   \n",
        "\n",
-       "        marital_Separated  marital_Widow  label       ID  window  \n",
-       "0                       0              0    0.0  5008804    15.0  \n",
-       "1                       0              0    0.0  5008805    14.0  \n",
-       "2                       0              0    0.0  5008806    29.0  \n",
-       "3                       0              0    0.0  5008808     4.0  \n",
-       "4                       0              0    0.0  5008809     4.0  \n",
-       "...                   ...            ...    ...      ...     ...  \n",
-       "438552                  1              0    NaN  6840104     NaN  \n",
-       "438553                  0              0    NaN  6840222     NaN  \n",
-       "438554                  0              0    NaN  6841878     NaN  \n",
-       "438555                  0              0    NaN  6842765     NaN  \n",
-       "438556                  0              0    NaN  6842885     NaN  \n",
+       "        marital_Widow  label       ID  window  \n",
+       "0                   0    0.0  5008804    15.0  \n",
+       "1                   0    0.0  5008805    14.0  \n",
+       "2                   0    0.0  5008806    29.0  \n",
+       "3                   0    0.0  5008808     4.0  \n",
+       "4                   0    0.0  5008809     4.0  \n",
+       "...               ...    ...      ...     ...  \n",
+       "438552              0    NaN  6840104     NaN  \n",
+       "438553              0    NaN  6840222     NaN  \n",
+       "438554              0    NaN  6841878     NaN  \n",
+       "438555              0    NaN  6842765     NaN  \n",
+       "438556              0    NaN  6842885     NaN  \n",
        "\n",
-       "[438557 rows x 55 columns]"
+       "[438557 rows x 49 columns]"
       ]
      },
      "execution_count": 2,
@@ -432,8 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dropna(inplace=True)\n",
-    "df.drop(columns=['Unnamed: 0'], inplace=True)"
+    "df.dropna(inplace=True)"
    ]
   },
   {
@@ -637,15 +636,10 @@
        " 'gender_M',\n",
        " 'gender_F',\n",
        " 'income_Student',\n",
-       " 'income_Student.1',\n",
        " 'income_Pensioner',\n",
-       " 'income_Pensioner.1',\n",
        " 'income_State servant',\n",
-       " 'income_State servant.1',\n",
        " 'income_Commercial associate',\n",
-       " 'income_Commercial associate.1',\n",
        " 'income_Working',\n",
-       " 'income_Working.1',\n",
        " 'housing_Municipal apartment',\n",
        " 'housing_With parents',\n",
        " 'housing_Office apartment',\n",
@@ -703,6 +697,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2e90f905-71c6-4eaa-902e-93580b420f51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = pd.concat([X, y], axis=1)\n",
+    "output.to_csv('./flask/model/model_trainset.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "165e6d0a",
    "metadata": {},
@@ -720,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d0e5912b",
    "metadata": {},
    "outputs": [
@@ -763,7 +768,7 @@
        "                 LogisticRegression(max_iter=10000, n_jobs=-1, tol=0.001))])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,9 +1210,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "12e098dd",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=1) #, stratify=y)\n",
